django-app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app
  labels:
    app: django
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
      - name: django-container
        image: ebryyau/jango-python-app:v1
 #       volumeMounts:
 #         - name: db-connection
 #           mountPath: /opt         
        ports:
        - containerPort: 8000
#      volumes:
#        - name: db-connection
#          secret:
#            secretName: test-secret
