ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: three-app-ingress
  namespace: default  # Use the correct namespace if needed
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /django
        pathType: Prefix
        backend:
          service:
            name: django-service
            port:
              number: 80  # The port exposed by your Django service
      - path: /nginx
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80  # The port exposed by your Django service
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
